Fixed glow animation being affected by hiding overflow on the X axis

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -13,10 +13,6 @@ html {
 /*
  * Global layout stuff
  */
- 
-* {
-  overflow-x: hidden;
-}
 
 body {
   color: #545149;
