--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -56,7 +56,7 @@ footer:before {
 .userID {
   transition: all 0.3s;
   position: relative;
-  right: -200px;
+  right: 25%;
   opacity: 0;
 }
 
